--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -123,7 +123,7 @@ footer {
 
 	position: relative;
 
-	z-index: 0;
+//	z-index: 0;
 
 	cursor: default;
 
